--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=ShoppingBlogService
+spring.application.name=BlogMicroservice
 server.port=8083
 
-spring.main.web-application-type=reactive
+
 server.error.include-message=always
 
-logging.level.org.springframework.web.reactive.result.method.annotation.RequestMappingHandlerMapping=trace
+logging.level.org.springframework.web.result.method.annotation.RequestMappingHandlerMapping=trace
 
-spring.data.mongodb.database=shoppingblogservicedb
+spring.data.mongodb.database=blogmicroservicedb
 
